# spookybrew-ethers-rs

./: .gitignore  Cargo.toml  Makefile  README.md  _docs_reference_calculate_lp.md  config.json  example_external_pairs.json
.github/workflows/: build.yml  release.yml
src/: config.rs  contracts.rs  lib.rs
src/abi/: brewboo_v3.json
src/handlers/: brew_boo.rs  mod.rs
src/strategies/: dynamic_external.rs  mod.rs  simple.rs  simple_brew.rs  strategy_dynamic_external.rs  strategy_simple.rs  types.rs
