[package]
name = "spookybrew_ethers_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "openssl",
    "abigen",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
url = "2.2"
indicatif = "0.16"
unit-testing = "3.1.0"
